Force to fetch and checkout the tag that is being released from the eepp repository: before any release eepp should have the corresponding ecode version tag. This tag will be checkouted and create the release from it, in consequence the tag will be created in ecode repository and released.

--- a/.github/workflows/ecode-release.yml
+++ b/.github/workflows/ecode-release.yml
@@ -66,7 +66,11 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-        with: { repository: 'SpartanJ/eepp', fetch-depth: 0, submodules: 'recursive' }
+        with:
+          repository: 'SpartanJ/eepp'
+          fetch-depth: 0
+          submodules: 'recursive'
+          ref: 'refs/tags/${{ needs.release.outputs.version }}'
       - name: Set Environment Variables
         run: |
           echo "$HOME/.local/bin" >> "$GITHUB_PATH"
@@ -123,7 +127,11 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-        with: { repository: 'SpartanJ/eepp', fetch-depth: 0, submodules: 'recursive' }
+        with:
+          repository: 'SpartanJ/eepp'
+          fetch-depth: 0
+          submodules: 'recursive'
+          ref: 'refs/tags/${{ needs.release.outputs.version }}'
       - name: Set Environment Variables
         run: |
           echo "$HOME/.local/bin" >> "$GITHUB_PATH"
@@ -184,7 +192,11 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-        with: { repository: 'SpartanJ/eepp', fetch-depth: 0, submodules: 'recursive' }
+        with:
+          repository: 'SpartanJ/eepp'
+          fetch-depth: 0
+          submodules: 'recursive'
+          ref: 'refs/tags/${{ needs.release.outputs.version }}'
       - name: Set Environment Variables
         run: |
           echo "$HOME/.local/bin" >> "$GITHUB_PATH"
@@ -234,7 +246,11 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-        with: { repository: 'SpartanJ/eepp', fetch-depth: 0, submodules: 'recursive' }
+        with:
+          repository: 'SpartanJ/eepp'
+          fetch-depth: 0
+          submodules: 'recursive'
+          ref: 'refs/tags/${{ needs.release.outputs.version }}'
       - name: System Information
         run: |
           system_profiler SPSoftwareDataType
@@ -278,7 +294,11 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-        with: { repository: 'SpartanJ/eepp', fetch-depth: 0, submodules: 'recursive' }
+        with:
+          repository: 'SpartanJ/eepp'
+          fetch-depth: 0
+          submodules: 'recursive'
+          ref: 'refs/tags/${{ needs.release.outputs.version }}'
       - name: System Information
         run: |
           system_profiler SPSoftwareDataType
