--- a/.github/workflows/ecode-release.yml
+++ b/.github/workflows/ecode-release.yml
@@ -233,6 +233,50 @@ jobs:
           files: |
             projects/mingw32/ecode/ecode-windows-${{ env.INSTALL_REF }}-${{ env.RARCH }}.zip
 
+  build_windows_arm64_cross:
+    name: Windows arm64
+    needs: release
+    strategy:
+      matrix:
+        config:
+          - compiler: default
+            arch: arm64
+            container: ubuntu-22.04
+    runs-on: ${{ matrix.config.container }}
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+        with:
+          repository: 'SpartanJ/eepp'
+          fetch-depth: 0
+          submodules: 'recursive'
+          ref: 'refs/tags/${{ needs.release.outputs.version }}'
+      - name: Set Environment Variables
+        run: |
+          echo "$HOME/.local/bin" >> "$GITHUB_PATH"
+          echo "INSTALL_REF=${{ needs.release.outputs.version }}" >> "$GITHUB_ENV"
+      - name: Update Packages
+        run: |
+          sudo add-apt-repository -y universe
+          sudo add-apt-repository -y multiverse
+          sudo apt-get update
+      - name: Install dependencies
+        run: |
+          sudo apt-get install -y libfuse2 fuse
+          wget https://github.com/premake/premake-core/releases/download/v5.0.0-beta2/premake-5.0.0-beta2-linux.tar.gz
+          tar xvzf premake-5.0.0-beta2-linux.tar.gz
+      - name: Build ecode
+        run: |
+          bash projects/mingw32/ecode/build.app.sh --arch=arm64
+      - name: Upload Files
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ needs.release.outputs.version }}
+          draft: false
+          prerelease: true
+          files: |
+            projects/mingw32/ecode/ecode-windows-${{ env.INSTALL_REF }}-arm64.zip
+
   build_macos:
     name: macOS arm64
     needs: release
