--- a/.github/workflows/ecode-release.yml
+++ b/.github/workflows/ecode-release.yml
@@ -105,7 +105,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           repository: SpartanJ/ecode
-          tag_name: ${{ needs.release.outputs.version }}
+          tag_name: ecode-${{ needs.release.outputs.version }}
           draft: false
           prerelease: true
           files: |
@@ -169,7 +169,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           repository: SpartanJ/ecode
-          tag_name: ${{ needs.release.outputs.version }}
+          tag_name: ecode-${{ needs.release.outputs.version }}
           draft: false
           prerelease: true
           files: |
@@ -227,7 +227,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           repository: SpartanJ/ecode
-          tag_name: ${{ needs.release.outputs.version }}
+          tag_name: ecode-${{ needs.release.outputs.version }}
           draft: false
           prerelease: true
           files: |
@@ -271,7 +271,7 @@ jobs:
       - name: Upload Files
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ needs.release.outputs.version }}
+          tag_name: ecode-${{ needs.release.outputs.version }}
           draft: false
           prerelease: true
           files: |
@@ -319,7 +319,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           repository: SpartanJ/ecode
-          tag_name: ${{ needs.release.outputs.version }}
+          tag_name: ecode-${{ needs.release.outputs.version }}
           draft: false
           prerelease: true
           files: |
@@ -371,7 +371,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           repository: SpartanJ/ecode
-          tag_name: ${{ needs.release.outputs.version }}
+          tag_name: ecode-${{ needs.release.outputs.version }}
           draft: false
           prerelease: true
           files: |
